# multibot-startup-example

./: .gitmodules  CMakeLists.txt  README.md  package.xml
launch/: run_example.launch  spawn_1_bots.launch  spawn_3_bots.launch  spawn_3_nav_bots.launch  start_move_base.launch
rviz/: spawn_3_move_base_bots.rviz
script/: control_move_base.py
worlds/: example_movement.world  simple_example.world
